[gd_scene load_steps=24 format=3 uid="uid://chis4b4c44mwo"]

[ext_resource type="StyleBox" uid="uid://dwuudlvawkj6" path="res://src/main/ui/menu/rounded-style-box.tres" id="1_sl5op"]
[ext_resource type="Script" path="res://src/main/main-menu-panel.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://cbfwawa4bt7lv" path="res://src/main/WiggleSprite.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dsf2oyh5o36hf" path="res://src/main/CardShadows.tscn" id="6_w52qk"]
[ext_resource type="PackedScene" uid="uid://b4gqbolgkyiwd" path="res://src/main/CardControl.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://gu3ngi46bxrb" path="res://src/main/MusicControl.tscn" id="8_limnq"]
[ext_resource type="PackedScene" uid="uid://dqsc660xqwxyt" path="res://src/main/ui/menu/World2Buttons.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://cx8rtammgc8yh" path="res://assets/main/frog-card-sheet.png" id="10"]
[ext_resource type="Texture2D" uid="uid://blb4vrsohwask" path="res://assets/main/lizard-sheet.png" id="11"]
[ext_resource type="Texture2D" uid="uid://dx45wefmsfa7f" path="res://assets/main/shark-card-sheet.png" id="12"]
[ext_resource type="Script" path="res://src/main/main-menu-title.gd" id="12_lnacp"]
[ext_resource type="Texture2D" uid="uid://bdv15xc6n7sck" path="res://assets/main/fish-sheet.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bjadk7hn5xmru" path="res://assets/main/icon-sheet.png" id="14"]
[ext_resource type="Script" path="res://src/main/version-label.gd" id="15"]
[ext_resource type="Theme" uid="uid://dl711xjpkrd50" path="res://src/main/ui/menu/theme/h5.theme" id="16"]
[ext_resource type="PackedScene" uid="uid://clyf77gifoid0" path="res://src/main/ui/menu/World3Buttons.tscn" id="17"]
[ext_resource type="Script" path="res://src/main/world-decoration-holder.gd" id="18"]
[ext_resource type="PackedScene" uid="uid://c0h2b4udal4qg" path="res://src/main/ui/menu/World1Buttons.tscn" id="19"]
[ext_resource type="Script" path="res://src/main/ui/menu/level-button-holder.gd" id="20"]
[ext_resource type="PackedScene" uid="uid://blr3fsts3n8wb" path="res://src/main/decoration/World2Decorations.tscn" id="21"]
[ext_resource type="PackedScene" uid="uid://6d3r3vr4rg0o" path="res://src/main/GameState.tscn" id="21_b4key"]
[ext_resource type="PackedScene" uid="uid://dpdupikkgdltm" path="res://src/main/decoration/World3Decorations.tscn" id="22"]
[ext_resource type="PackedScene" uid="uid://bknjwua3ybkww" path="res://src/main/decoration/World1Decorations.tscn" id="23"]

[node name="MainMenuPanel" type="Panel" groups=["main_menu_panels"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_sl5op")
script = ExtResource("4")

[node name="WorldDecorationHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -250.0
offset_right = 462.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("18")

[node name="World1Decorations" parent="WorldDecorationHolder" instance=ExtResource("23")]

[node name="World2Decorations" parent="WorldDecorationHolder" instance=ExtResource("21")]
visible = false

[node name="World3Decorations" parent="WorldDecorationHolder" instance=ExtResource("22")]
visible = false

[node name="CardShadows" parent="." node_paths=PackedStringArray("parent_panel") instance=ExtResource("6_w52qk")]
parent_panel = NodePath("..")

[node name="MusicControl" parent="." instance=ExtResource("8_limnq")]

[node name="Title" type="Control" parent="." node_paths=PackedStringArray("game_state")]
unique_name_in_owner = true
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -250.0
offset_right = 462.0
offset_bottom = 250.0
mouse_filter = 2
script = ExtResource("12_lnacp")
text = "fr?g f?nder"
CardControlScene = ExtResource("8")
game_state = NodePath("../TitleGameState")

[node name="Card1" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 300.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 130.0
card_front_type = 4
card_front_details = "f"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card2" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 380.0
offset_top = 50.0
offset_right = 460.0
offset_bottom = 130.0
card_front_type = 4
card_front_details = "r"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card3" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 460.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 130.0
card_front_type = 1
game_state = NodePath("../../TitleGameState")
practice = true

[node name="Card4" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 540.0
offset_top = 50.0
offset_right = 620.0
offset_bottom = 130.0
card_front_type = 4
card_front_details = "g"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card5" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 220.0
offset_top = 130.0
offset_right = 300.0
offset_bottom = 210.0
card_front_type = 4
card_front_details = "f"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card6" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 300.0
offset_top = 130.0
offset_right = 380.0
offset_bottom = 210.0
card_front_type = 1
game_state = NodePath("../../TitleGameState")
practice = true

[node name="Card7" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 380.0
offset_top = 130.0
offset_right = 460.0
offset_bottom = 210.0
card_front_type = 4
card_front_details = "n"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card8" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 460.0
offset_top = 130.0
offset_right = 540.0
offset_bottom = 210.0
card_front_type = 4
card_front_details = "d"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card9" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 540.0
offset_top = 130.0
offset_right = 620.0
offset_bottom = 210.0
card_front_type = 4
card_front_details = "e"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Card10" parent="Title" node_paths=PackedStringArray("game_state") instance=ExtResource("8")]
offset_left = 620.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 210.0
card_front_type = 4
card_front_details = "r"
game_state = NodePath("../../TitleGameState")
practice = true
shown_face = 1

[node name="Instructions" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -250.0
offset_right = 462.0
offset_bottom = 250.0
mouse_filter = 2

[node name="Frog" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(137.73, 278.618)
texture = ExtResource("10")
hframes = 8
vframes = 8
frame = 1
wiggle_frames = Array[int]([0, 1])

[node name="Find" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(204.054, 278.618)
texture = ExtResource("14")
hframes = 4
vframes = 3
frame = 3
wiggle_frames = Array[int]([2, 3])

[node name="Lizard" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(101.866, 380.326)
texture = ExtResource("11")
hframes = 8
vframes = 8
frame = 4
wiggle_frames = Array[int]([4, 5])

[node name="Love" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(168.467, 380.326)
texture = ExtResource("14")
hframes = 4
vframes = 3
frame = 6
wiggle_frames = Array[int]([6, 7])

[node name="Fish" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(758.264, 380.326)
texture = ExtResource("13")
hframes = 8
vframes = 2
frame = 1
wiggle_frames = Array[int]([0, 1])

[node name="DontLove" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(824.588, 380.326)
texture = ExtResource("14")
hframes = 4
vframes = 3
frame = 8
wiggle_frames = Array[int]([8, 9])

[node name="Shark" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(723.459, 278.618)
texture = ExtResource("12")
hframes = 8
vframes = 4
frame = 4
wiggle_frames = Array[int]([4, 5])

[node name="DontFind" parent="Instructions" groups=["card_shadow_casters"] instance=ExtResource("6")]
position = Vector2(790.06, 278.618)
texture = ExtResource("14")
hframes = 4
vframes = 3
frame = 4
wiggle_frames = Array[int]([4, 5])

[node name="LevelButtonHolder" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -250.0
offset_right = 462.0
offset_bottom = 250.0
mouse_filter = 2
script = ExtResource("20")

[node name="World1Buttons" parent="LevelButtonHolder" instance=ExtResource("19")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="World2Buttons" parent="LevelButtonHolder" instance=ExtResource("9")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="World3Buttons" parent="LevelButtonHolder" instance=ExtResource("17")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TitleGameState" parent="." instance=ExtResource("21_b4key")]
unique_name_in_owner = true

[node name="VersionLabelHolder" type="Node" parent="."]

[node name="VersionLabel" type="Label" parent="VersionLabelHolder"]
modulate = Color(0, 0, 0, 0.188235)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -20.0
offset_right = -6.0
offset_bottom = -2.0
theme = ExtResource("16")
text = "v1.02"
horizontal_alignment = 2
script = ExtResource("15")

[connection signal="cards_changed" from="Title" to="." method="_on_title_cards_changed"]
[connection signal="level_pressed" from="LevelButtonHolder/World1Buttons" to="." method="_on_level_buttons_level_pressed"]
[connection signal="next_world_pressed" from="LevelButtonHolder/World1Buttons" to="LevelButtonHolder" method="_on_level_buttons_next_world_pressed"]
[connection signal="prev_world_pressed" from="LevelButtonHolder/World1Buttons" to="LevelButtonHolder" method="_on_level_buttons_prev_world_pressed"]
[connection signal="level_pressed" from="LevelButtonHolder/World2Buttons" to="." method="_on_level_buttons_level_pressed"]
[connection signal="next_world_pressed" from="LevelButtonHolder/World2Buttons" to="LevelButtonHolder" method="_on_level_buttons_next_world_pressed"]
[connection signal="prev_world_pressed" from="LevelButtonHolder/World2Buttons" to="LevelButtonHolder" method="_on_level_buttons_prev_world_pressed"]
[connection signal="level_pressed" from="LevelButtonHolder/World3Buttons" to="." method="_on_level_buttons_level_pressed"]
[connection signal="next_world_pressed" from="LevelButtonHolder/World3Buttons" to="LevelButtonHolder" method="_on_level_buttons_next_world_pressed"]
[connection signal="prev_world_pressed" from="LevelButtonHolder/World3Buttons" to="LevelButtonHolder" method="_on_level_buttons_prev_world_pressed"]
